@@ -1,6 +1,7 @@
 Changelog
 ---------
 3.8.8
+- added RPClass support (type checks and transfer compression) to RPAction
 - content transfer includes a md5 hash of the content,
   if both server and client are using the new protocol version 34
 - automatically try to use a configured SOCKS-proxy. If it cannot be used, Marauroa falls back to direct connections
